--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         app:layout_constraintVertical_bias="0.127" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnStats"
         android:layout_width="250dp"
         android:layout_height="80dp"
         android:backgroundTint="#252222"
