--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -18,10 +18,10 @@
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:text="name"
+            android:textColor="@color/white"
             android:id="@+id/tvName"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="20dp"
-            android:textColor="#0000FF"
             />
 
         <TextView
@@ -31,7 +31,7 @@
             android:layout_marginTop="5dp"
             android:text="score"
             android:id="@+id/tvScore"
-            android:textColor="#0000FF"
+            android:textColor="@color/white"
             android:textSize="20dp" />
     </LinearLayout>
 </LinearLayout>
