--- a/app/src/main/res/layout/activity_leaderboard_adapter.xml
+++ b/app/src/main/res/layout/activity_leaderboard_adapter.xml
@@ -5,33 +5,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="30dp"
             android:text="name"
             android:textColor="@color/white"
             android:id="@+id/tvName"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="25dp"
             android:layout_marginLeft="20dp"
             />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:text="score"
             android:id="@+id/tvScore"
             android:textColor="@color/white"
-            android:textSize="20dp" />
-    </LinearLayout>
+            android:textSize="20dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="20dp"></TextView>
 </LinearLayout>
