--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
 
-    tools:context=".SettingsActivity">
+    tools:context="Settings.SettingsActivity">
 
     <Button
         android:id="@+id/btnReturn"
