--- a/app/src/main/res/layout/activity_custom_dialog.xml
+++ b/app/src/main/res/layout/activity_custom_dialog.xml
@@ -20,6 +20,15 @@
       android:textSize="40dp"
       android:textColor="@color/white"
       android:gravity="center"></TextView>
+  <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/tvTimer"
+      android:text="Time left:"
+      android:textColor="@color/white"
+      android:gravity="center"
+      android:textSize="25dp"
+      ></TextView>
 
   <LinearLayout
       android:layout_width="wrap_content"
